Use UUID for internal